fixed the transtioning of the imgs however it does break once it gets to the end of the array

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,13 +15,10 @@ section {
   padding-left: 2rem;
   padding-right: 2rem;
   opacity: 0;
-  top: 100%;
-  transition: opacity 1s ease-in;
-  transition: top 15s ease-in-out ;
+  transition: opacity 1.6s ease-in;
 }
 .appear{
   opacity: 1;
-  top: 0;
 }
 a:link {
   text-decoration: none;
@@ -219,7 +216,7 @@ h1 {
 }
 .sec-2-img {
   top: 100%;
-  transition: top 9s ease-in-out;
+  transition: top 15s ease-in;
   opacity: 0;
   transition: opacity 2s;
   border-radius: 100%;
@@ -265,7 +262,7 @@ h1 {
 }
 /* zooms on hover */
 .mainpic:hover, .leftpic:hover, .righttop:hover, .rightmid:hover, .rightbot:hover{
-  transform: scale(1.25);
+  transform: scale(1.15);
 }
 .leftpic {
   grid-area: 5 / 1 / span 2 / span 1;
